# Team_4ward

./: .gitignore  README.md  SETUP.md  pyproject.toml  requirements.txt
app/: db.py  dependencies.py  main.py  security.py
app/ai/: dummy_analyzer.py
app/ai/scripts/: main.py
app/api/: analyze.py  auth.py
app/privacy/: image_masker.py
app/services/: analyze_service.py  report_service.py  storage_service.py
demo/: main.py
demo/image/: bodo.jfif
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: BottomNav.jsx  HazardCard.jsx  Layout.jsx  RequireAuth.jsx  RiskBadge.jsx
frontend/src/pages/: AdminPage.jsx  AnalyzingPage.jsx  HistoryPage.jsx  HomePage.jsx  LoginPage.jsx  PreviewPage.jsx  ReportPage.jsx  ResultPage.jsx  SignupPage.jsx  UploadPage.jsx
scripts/: main.py  main_2.py  main_claude.py  test.py  test_2.py  test_law.py
scripts/chroma_db/5045d922-a479-4878-9d8a-5a6d17481907/: index_metadata.pickle
scripts/forge_db/: view.py
scripts/forge_db/accident_case/: kosha_crawler.py  pdf2text.py  view2.py
scripts/image/: d.py
scripts/light_vision/: main.py
scripts/results/: 전도.txt
scripts/results/dummy/: 전도_retrieval_log_rerank_prompt_edited_5.txt  추락2_retrieval_log_rerank_prompt_edited_5.txt  추락_retrieval_log_rerank_prompt_edited_5.txt  흔들림_retrieval_log_rerank_prompt_edited_5.txt
scripts/results/final/: 34_20260612_050123.txt  35_20260612_050225.txt  36_20260612_050323.txt  37_20260612_050422.txt  38_20260612_050530.txt  전도.txt  전도_06_11.txt  전도_06_11_json.txt  전도_20260611_144614.txt  (+1 more)
(+50 files in other folders)
