[project]
name = "team-4ward"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic[vertex]>=0.109.1",
    "chromadb>=1.5.9",
    "google-cloud-aiplatform>=1.71.1",
    "google-genai>=2.8.0",
    "kiwipiepy>=0.23.1",
    "konlpy>=0.6.0",
    "openai>=2.37.0",
    "pymupdf>=1.27.2.3",
    "rank-bm25>=0.2.2",
    "vertexai>=1.71.1",
]
